css cache busting

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -54,4 +54,4 @@
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap" rel="stylesheet">
 <link rel="shortcut icon" href="{{ '/assets/images/avatar.jpg' | absolute_url }}" type="image/jpg">
 <link rel="icon" href="{{ '/assets//images/favicon.ico' | absolute_url }}" type="image/x-icon">
-<link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+<link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}?{{site.time | date: '%s'}}">
