fix menu on ipad

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
         </a>
       </li>
 
-      <li>
+      <li tabindex="0">
         <div>Listen</div>
         <ul>
           {%- for link in site.data.navigation.main -%}
@@ -31,7 +31,7 @@
         </ul>
       </li>
 
-      <li>
+      <li tabindex="1">
         <div>Follow</div>
         <ul>
           {%- for link in site.data.navigation.social -%}
